# tinyhat--runtimes--openclaw

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  VERSION  bootstrap.sh  force-upgrade.sh  supervisor.py
.claude/skills/: define-tests  local-e2e  sharpen-skill  update-guidance
.github/: CODEOWNERS
.github/workflows/: ci.yml
dev/: Dockerfile  README.md  entrypoint.sh
dev/systemd-proof/: README.md  lock_proof.sh  lock_proof_helper.py  run_proof.sh  steady_supervisor.py  stub_gateway.py
plugins/tinyhat-platform/: README.md  openclaw.plugin.json  (+1 more)
scripts/: check_dev_skills.py  smoke_start_chatgpt_link_retry.py
tests/: test_capability_check.py  test_command_lock.py  test_extraction_guards.py  test_supervisor.py  test_systemctl_shim.py  test_tiny_runtime.py  test_tinyhat_cli.py
tiny_runtime/: README.md  install.sh  pyproject.toml
tiny_runtime/bake/: assemble-bundle.sh  preinstall-hot-image-plugins.sh  verify-bundle.sh
tiny_runtime/dev/: Dockerfile  entrypoint.sh  fake-openclaw  identity.json
tiny_runtime/systemd/: tinyhat-runtime-attestation.service  tinyhat-runtime-gateway.service  tinyhat-runtime-platform.service
tiny_runtime/tinyhat_runtime/: __init__.py  attestation.py  bundle.py  command_ledger.py  hot_image.py  identity.py  launcher.py  main.py  openclaw_adapter.py  paths.py  platform_client.py  platform_loop.py  private_access.py  redaction.py  runtime_commands.py  staging.py  subscription_link.py  supervisor_bridge.py
tinyhat_cli/: __init__.py  __main__.py  _facade.py  entrypoint.py  extraction_map.json  registry.py  schemas.py
(+42 files in other folders)
